changing the style for tht title

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 h1{
-    color: red;
+    color: rgb(123, 255, 0);
 }
 body{
-    background-color: aquamarine;
+    background-color: rgb(15, 15, 15);
 }
